# dse-web

./: .dockerignore  .gitignore  Cargo.toml  Dioxus.toml  Dockerfile  clean.sh  docker-compose.yml  serve.sh
dse_lib/: Cargo.toml
dse_lib/src/: lib.rs
public/: tailwind.css
src/: get.rs  main.rs
