[package]
name = "dse-web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = "0.4.3"
dioxus-fullstack = "0.4.3"
reqwest = "0.11.23"
scraper = "0.18.1"
serde = "1.0.193"
tokio = "1.35.1"

[dependencies.getrandom]
version = "0.2.10"
features = ["js"]

[features]
default = []
ssr = ["dioxus-fullstack/axum"]
web = ["dioxus-fullstack/web"]

# Same as in the Stable section
[profile.release]
opt-level = "z"
debug = false
lto = true
codegen-units = 1
panic = "abort"
strip = true
incremental = false
