[package]
name = "dse-web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dse_lib = { path = "./dse_lib"}
getrandom = {version = "0.2.10", features = ["js"] }
dioxus = "0.4.3"
dioxus-fullstack = "0.4.3"
reqwest = { version = "0.11.23", features = ["native-tls-vendored"] }
scraper = "0.18.1"
serde = "1.0.193"
tokio = "1.35.1"

[features]
ssr = ["dioxus-fullstack/axum"]
web = ["dioxus-fullstack/web"]

[unstable]
build-std = ["std", "panic_abort", "core", "alloc"]
build-std-features = ["panic_immediate_abort"]

[build]
rustflags = [
    "-Clto",
    "-Zvirtual-function-elimination",
    "-Zlocation-detail=none"
]

[profile.release]
opt-level = "z"
debug = false
lto = true
codegen-units = 1
panic = "abort"
strip = true
incremental = false